# image-processing-gui

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  RAEDME.md  README.md  cudaHeaders.h  cudaMain.cu  cudaMain.h  main.cpp  main.cu  tools.cu  tools.cuh  tools.h  wind.cpp
src/: base.h  cudaHeaders.h  cudaMain.cu  cudaMain.h  main.cpp  tools.cu  tools.h
